Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15291

OQGraph fails to build on FreeBSD

    XMLWordPrintable

Details

    Description

      When building the OQGRAPH engine, it errors out

      --- storage/oqgraph/CMakeFiles/oqgraph.dir/graphcore.cc.o ---
      In file included from /usr/ports/databases/mariadb100-server/work/mariadb-10.0.34/storage/oqgraph/graphcore.cc:29:
      In file included from /usr/ports/databases/mariadb100-server/work/mariadb-10.0.34/storage/oqgraph/graphcore-graph.h:28:
      In file included from /usr/ports/databases/mariadb100-server/work/mariadb-10.0.34/storage/oqgraph/oqgraph_shim.h:28:
      /usr/ports/databases/mariadb100-server/work/mariadb-10.0.34/storage/oqgraph/oqgraph_judy.h:66:24: error: too few arguments provided
       to function-like macro invocation
              return setbit(n);                                               
                             ^
      /usr/include/sys/param.h:285:9: note: macro 'setbit' defined here              
      #define setbit(a,i)     (((unsigned char *)(a))[(i)/NBBY] |= 1<<((i)%NBBY))
              ^
      

      Not sure from where OQGraph expects the bitset defined from but this is broken now.

      Attachments

        Activity

          People

            svoj Sergey Vojtovich
            spil Bernard Spil
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: