MDEV-15291: storage/oqgraph: Resolve conflict with setbit from sys/param.h

Rename setbit to avoid overlap with setbit from sys/param.h

Fixes https://jira.mariadb.org/browse/MDEV-15291